--- a/project3/project3style.css
+++ b/project3/project3style.css
@@ -1,113 +1,288 @@
+* {
+	margin: 0;
+	padding: 0;
+}
+
 body {
-	background-image: url("./background.jpg");
+	background-image: url("background.jpg");
 	background-size: cover;
+	background-position: center;
 	background-attachment: fixed;
 }
 
-.textbox {
-	background: white;
-	height: 200px;
-	width: 325px;
-	border: none;
+a {
+	color: black;
+	text-decoration: none;
+}
+
+a:hover {
+	text-decoration: underline;
+}
+
+/*-------------------------Ruler------------------------*/
+
+h2 {
+	font-family: avenir;
+	font-size: 13px;
+	font-weight: lighter;
+	letter-spacing: 1px;
 	position: absolute;
-	top: 80px;
-	left: 100px;
-	z-index: 4;
-
-	/*Transition*/
-	-webkit-transition-property: border;
-	transition-property: border;
+	color: black;
 }
+
+.year-2109 {
+	width: 30px;
+	height: 20px;
+	top: 0;
+	right: 15px;
+	position: fixed;
+}
+
+.year-2099 {
+	width: 30px;
+	height: 20px;
+	top: 10%;
+	right: 15px;
+	position: fixed;
+	border-top: solid 1px;
+}
+
+.year-2089 {
+	width: 30px;
+	height: 20px;
+	top: 20%;
+	right: 15px;
+	position: fixed;
+	border-top: solid 1px;
+}
+
+.year-2079 {
+	width: 30px;
+	height: 20px;
+	top: 30%;
+	right: 15px;
+	position: fixed;
+	border-top: solid 1px;
+}
+
+.year-2069 {
+	width: 30px;
+	height: 20px;
+	top: 40%;
+	right: 15px;
+	position: fixed;
+	border-top: solid 1px;
+}
+
+.year-2059 {
+	width: 30px;
+	height: 20px;
+	top: 50%;
+	right: 15px;
+	position: fixed;
+	border-top: solid 1px;
+}
+
+.year-2049 {
+	width: 30px;
+	height: 20px;
+	top: 60%;
+	right: 15px;
+	position: fixed;
+	border-top: solid 1px;
+}
+
+.year-2039 {
+	width: 30px;
+	height: 20px;
+	top: 70%;
+	right: 15px;
+	position: fixed;
+	border-top: solid 1px;
+}
+
+.year-2029 {
+	width: 30px;
+	height: 20px;
+	top: 80%;
+	right: 15px;
+	position: fixed;
+	border-top: solid 1px;
+}
+
+.year-2019 {
+	width: 30px;
+	height: 20px;
+	top: 90%;
+	right: 15px;
+	position: fixed;
+	border-top: solid 1px;
+}
+
+/*-------------------------Textbox------------------------*/
+
+.textbox-back {
+	width: 325px;
+	height: 210px;
+	border: 1.2px dashed white;
+	position: fixed;
+	top: 70px;
+	left: 70px;
+	z-index: 5;
+	position: absolute;
+	animation: boxFrame 30.3s;
+	animation-delay: 3s;
+	animation-fill-mode: forwards, none;
+}
+
+@-webkit-keyframes boxFrame {
+	99% {
+		opacity: 1;
+	}
+	100% {
+		opacity: 0;
+	}
+}
+
+.textbox {
+	background-color: white;
+	opacity: 0;
+	width: 325px;
+	height: 210px;
+	border: none;
+	position: fixed;
+	top: 70px;
+	left: 70px;
+	z-index: 10;
+}
+
 .textbox:hover {
-	border: dashed 1.2px;
+	background-color: white;
+	opacity: 1;
+	border: 1.2px dashed;
 }
 
-/*Explanation*/
-h1 {
+.textbox h1 {
 	font-family: avenir;
 	font-weight: 300;
 	font-size: 9.5pt;
 	line-height: 2;
-	height: 180px;
-	width: 280px;
+	width: 275px;
+	height: 175px;
 	position: absolute;
-	top: 17px;
+	top: 19px;
 	left: 25px;
-	z-index: 4;
-}
-/*Transition*/
-h1:before {
-	content: attr(data-text);
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 0;
-	height: 0;
-	overflow: hidden;
-	transition: ;
-}
-h1:hover:before {
-	width: 100%;
-	height: 100%;
+	opacity: 0;
 }
 
-#waterLevel {
-	position: absolute;
-	height: 50px;
-	width: 103%;
+.textbox h1:hover {
+	opacity: 1;
+	}
+
+/*-------------------------WaterLevel------------------------*/
+
+.waterLevel {
 	background-color: #40c4e0;
-	opacity: .70;
-	top: 94.2%;
-	left: -50px;
-	z-index: 4;
-	/**transition-origin: bottom;**/
-}
-
-/**
-.water {
-	height: 50px;
-	width: 103%;
-	background: #40c4e0;
-	opacity: .70;
-	display: block;
+	opacity: 0.7;
+	width: 100%;
+	height: 10%;
+	bottom: 0;
+	left: 0;
+	border-top: 5px solid white;
+	border-width: 4px;
 	position: absolute;
-	top: 94.2%;
-	left: -50px;
-	z-index: 3;
 	animation: waterLevel 30s;
-	animation-delay: 5s;
+	animation-delay: 3s;
 	animation-fill-mode: forwards, none;
 }
-**/
 
 @-webkit-keyframes waterLevel {
 	0% {
-		height: 50px;
-		top: 94.2%;
+		height: 10%;
+		background-color: #40c4e0;
+		opacity: 0.7;
+	}
+	11.2% {
+		height: 20%;
+	}
+	22.4% {
+		height: 30%;
+		opacity: 0.7;
+	}
+	33.6% {
+		height: 40%;
+	}
+	44.8% {
+		height: 50%;
+	}
+	56% {
+		height: 60%;
+	}
+	67.2% {
+		height: 70%;
+	}
+	78.4% {
+		height: 80%;
+	}
+	89.6% {
+		height: 90%;
 	}
 	100% {
 		height: 100%;
-		top: 0%;
+		background-color: #27397c;
+		opacity: 1;
 	}
 }
 
-/*Goal – 2100*/
-h2 {
-	font-family: avenir;
-	font-weight: 300;
-	font-size: 9.5pt;
+/*-------------------------Reload------------------------*/
+
+.reload {
+	width: 200px;
+	height: 70px;
+	border-radius: 15px;
+	background-color: white;
+	opacity: 0;
 	position: absolute;
-	left: 1630px;
-	z-index: 4;
+	left: 50%;
+	margin-left: -100px;
+	top: 50%;
+	margin-top: -35px;
+	z-index: 20;
+	animation: reloadButton 1.5s;
+	animation-delay: 33s;
+	animation-fill-mode: forwards, none;
 }
 
-/*Starting point – 2019*/
-h3 {
-	font-family: avenir;
-	font-weight: 300;
-	font-size: 9.5pt;
-	position: absolute;
-	top: 825px;
-	left: 1630px;
-	z-index: 4;
+@-webkit-keyframes reloadButton {
+	99% {
+		opacity: 0;
+	}
+	100% {
+		opacity: 1;
+	}
 }
+
+
+
+.reload h3 {
+	font-family: avenir;
+	font-weight: 500;
+	font-size: 25px;
+	position: relative;
+	top: 20px;
+	left: 50px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
